# interviews

./: .gitignore  README.md
amazon/: README.md  demo.go  demo_test.go  go.mod  p1.go  p1_test.go  p2.go  p2_test.go
amazon/docs/: demo.md  p1.md  p2.md
architect-io/: README.md  go.mod  p1.go  p1_test.go  p2.go  p2_test.go
architect-io/docs/: p1.md  p2.md
coinbase/: README.md  go.mod  p1.go  p1_test.go  p2.go  p2_test.go
coinbase/docs/: p1.md  p2.md
google/: README.md  pyproject.toml
google/docs/: p1.md
google/src/: p1.py
google/tests/: test_p1.py
workiva/: README.md  go.mod  p1.go  p1_test.go
workiva/docs/: p1.md
