[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "google"
version = "0.0.1"
description = "Solutions for the Google technical interview"
readme = "README.md"
requires-python = ">=3.13"

dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "ruff"
]

[tool.ruff]
line-length = 88
